feat: base of Punk Code site is done

--- a/src/404.md
+++ b/src/404.md
@@ -1,8 +1,11 @@
 ---
-title: Oops! Not Found
-description: Bork
-layout: page
+layout: error
+title: Page Not Found
+description: This is the 404 Error Page for Punk Code, i.e. the page is not found and there is no information on ethical and sustainable web development here.
 permalink: /404.html
 ---
+Fuck. There should be a page here, shouldn't there?
 
-This is where you should tell the user how to find their content.
+Renamed? Removed? Who knows?
+
+Go back [home](/) and try again. Sorry.
